platform/networking/network-policies/rules/allow/ingress/document-service/allow-from-transaction-service.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-transaction-service
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: document-service
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          tier: workloads
      podSelector:
        matchLabels:
          network-role: backend
          app.kubernetes.io/name: transaction-service
    ports:
    - protocol: TCP
      port: 8084
